# NecroController

./: README.md
android-client/: local.properties
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/example/remoteshutdown/: ControlActivity.java  LiveStreamActivity.java  MainActivity.java
android-client/app/src/main/res/drawable/: btn_neon_purple.xml  btn_neon_teal.xml  card_bg_purple.xml  card_bg_teal.xml  glass_panel.xml  ic_camera.xml  ic_camera_stealth.xml  ic_content_copy.xml  ic_file_download.xml  ic_folder_search.xml  ic_live_stream.xml  ic_lock.xml  ic_mic.xml  ic_monitor.xml  ic_power.xml  ic_restart_alt.xml  ic_screenshot.xml  ic_search.xml  ic_terminal.xml  ic_wallpaper.xml
android-client/app/src/main/res/layout/: activity_control.xml  activity_live_stream.xml  activity_main.xml  activity_monitor.xml  item_device.xml
android-client/app/src/main/res/values/: colors.xml  themes.xml
laptop_server_cpp/: CMakeLists.txt  commands.h  file_manager.cpp  file_manager.h  main.cpp  utils.cpp  utils.h
